--- a/LeagueInformer/LeagueInformer/Resources/AppResources.resx
+++ b/LeagueInformer/LeagueInformer/Resources/AppResources.resx
@@ -123,6 +123,12 @@
   <data name="Common_OptionIsNotAvailable" xml:space="preserve">
     <value>Wybrana opcja jest niedostępna</value>
   </data>
+  <data name="Error_DownloadingData" xml:space="preserve">
+    <value>Wystąpił błąd pobierania danych z serwerów Riot Games,spróbuj ponownie później</value>
+  </data>
+  <data name="Error_Undefined" xml:space="preserve">
+    <value>Wystąpił nieznany błąd,spróbuj ponownie później</value>
+  </data>
   <data name="Main_ChooseFunction" xml:space="preserve">
     <value>Wybierz interesującą Cię funkcję:</value>
   </data>
