--- a/LeagueInformer/LeagueInformer/Resources/AppResources.resx
+++ b/LeagueInformer/LeagueInformer/Resources/AppResources.resx
@@ -123,8 +123,26 @@
   <data name="Common_OptionIsNotAvailable" xml:space="preserve">
     <value>Wybrana opcja jest niedostępna</value>
   </data>
+  <data name="Common_TryAgainLater" xml:space="preserve">
+    <value>\nSpróbuj ponownie później :)</value>
+  </data>
   <data name="Error_DownloadingData" xml:space="preserve">
     <value>Wystąpił błąd pobierania danych z serwerów Riot Games,spróbuj ponownie później</value>
+  </data>
+  <data name="Error_PlayerNotFound" xml:space="preserve">
+    <value>Nie znaleziono przywoływacza o podanym nicku</value>
+  </data>
+  <data name="Error_PlayerWithoutGamesHistory" xml:space="preserve">
+    <value>Wybrany gracz nie posiada historii gier</value>
+  </data>
+  <data name="Error_RequestAppError" xml:space="preserve">
+    <value>Ups!\nAplikacja nie może przetworzyć danych</value>
+  </data>
+  <data name="Error_RequestTimedOut" xml:space="preserve">
+    <value>Upłynął czas przetwarzania żądania.\nPrawdopodobnie straciłeś połączenie z internetem lub serwery Riot nie odpowiadają.{0}</value>
+  </data>
+  <data name="Error_RiotServersAreDown" xml:space="preserve">
+    <value>Serwery Riot Games nie odpowiadają.</value>
   </data>
   <data name="Error_Undefined" xml:space="preserve">
     <value>Wystąpił nieznany błąd,spróbuj ponownie później</value>
